<resources>
    <string name="app_name">LoginLib</string>
    <string name="login_please_input_phone_number">输入手机号</string>
    <string name="login_please_input_dynamic_pwd">输入动态密码</string>
    <string name="login_get_dynamic_pwd">获取动态密码</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="login_third_login">其他登录方式</string>
    <string name="login_text">登录</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="quick_loginregistr">快捷登录注册</string>
    <string name="login_please_input_username">手机/邮箱/昵称</string>
    <string name="login_please_input_pwd">输入密码</string>
    <string name="account_login">账号登录</string>

</resources>
