<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    tools:context=".view.activity.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="快捷登录注册"
        android:textColor="@color/color_222222"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--constraint.group 没有任何意义 不能作为布局中的一部分-->
    <android.support.constraint.Group
        android:id="@+id/view_safe"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_safe, tv_text" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_safe"
        android:layout_width="@dimen/x16"
        android:layout_height="@dimen/y16"
        android:layout_marginTop="@dimen/y4"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:src="@drawable/login_safely_big" />

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_a7a7a7"
        android:textSize="@dimen/s12"
        android:text="已通过APP安全认证"
        android:layout_marginStart="@dimen/x8"
        app:layout_constraintBottom_toBottomOf="@id/iv_safe"
        app:layout_constraintStart_toEndOf="@id/iv_safe"
        app:layout_constraintTop_toTopOf="@id/iv_safe" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/login_shape_edit_cursor"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:hint="@string/login_please_input_phone_number"
        android:inputType="phone"
        android:maxLength="11"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/login_c_black"
        android:textColorHint="@color/color_a7a7a7"
        android:textSize="@dimen/s18"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_phone_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_safe" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/login_c_eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    <ImageView
        android:id="@+id/iv_clear_phone_number"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/login_icon_delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone_number"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/et_dynamic_pwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:hint="@string/login_please_input_dynamic_pwd"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1"
        android:textCursorDrawable="@drawable/login_shape_edit_cursor"
        android:singleLine="true"
        android:textColor="@color/login_c_black"
        android:textColorHint="@color/login_c_eeeeee"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/iv_clear_dynamic_pwd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/et_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_number" />

    <ImageView
        android:id="@+id/iv_clear_dynamic_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:src="@drawable/login_icon_delete"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/et_dynamic_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_dynamic_pwd"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_get_msg_code"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y44"
        android:layout_marginEnd="30dp"
        android:background="@null"
        android:enabled="false"
        android:paddingStart="8dp"
        android:text="@string/login_get_dynamic_pwd"
        android:textColor="@color/login_btn_txt_msg"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_clear_dynamic_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_clear_dynamic_pwd" />


    <TextView
        android:id="@+id/tv_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/login_forget_pwd"
        android:textColor="@color/login_c_3377ff"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_get_msg_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_get_msg_code" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/login_c_eeeeee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_dynamic_pwd" />

<!--    <com.yiche.autoeasy.module.login.widget.PoliceView-->
<!--        android:id="@+id/tv_user_policy"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="@dimen/y16"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginTop="@dimen/y20"-->
<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/view8" />-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/login_text"
        android:enabled="false"
        android:textColor="@color/login_btn_color_selector"
        android:background="@drawable/login_submit_btn_selector"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view8" />

    <TextView
        android:id="@+id/tv_change_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:drawableEnd="@drawable/login_ic_arrow_right"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:padding="20dp"
        android:text="账号登录"
        android:textColor="@color/login_c_black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
    <android.support.constraint.Group
        android:id="@+id/group_third"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tv_third_login, iv_wxlogin, iv_qqlogin, iv_wblogin"/>

    <TextView
        android:id="@+id/tv_third_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_third_login"
        android:textColor="@color/login_c_646464"
        android:textSize="14sp"
        android:layout_marginBottom="@dimen/y20"
        app:layout_constraintBottom_toTopOf="@+id/iv_wxlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_wxlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/login_ic_wx"
        android:background="@drawable/login_third_circle_stroke"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_qqlogin"
        app:layout_constraintTop_toTopOf="@+id/iv_qqlogin" />

    <ImageView
        android:id="@+id/iv_qqlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x40"
        android:layout_marginEnd="@dimen/x40"
        android:layout_marginBottom="40dp"
        android:padding="10dp"
        android:src="@drawable/login_ic_qq"
        android:background="@drawable/login_third_circle_stroke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_wblogin"
        app:layout_constraintStart_toEndOf="@id/iv_wxlogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_third_login" />

    <ImageView
        android:id="@+id/iv_wblogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/login_ic_wb"
        android:background="@drawable/login_third_circle_stroke"
        app:layout_constraintBottom_toBottomOf="@+id/iv_qqlogin"
        app:layout_constraintStart_toEndOf="@+id/iv_qqlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_qqlogin" />


</android.support.constraint.ConstraintLayout>